--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,1 +1,98 @@
-/* No CSS *//*# sourceMappingURL=main.css.map */
+body {
+  background-image: url("https://images.unsplash.com/photo-1578185926328-db56802411f1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.content-wrapper {
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+}
+
+.weather-top {
+  display: inline-block;
+  padding: 50px 30px;
+}
+
+.weather-top h1 {
+  font-size: 3.6rem;
+  color: #ffe3e3;
+}
+
+.searchbar {
+  background-color: transparent;
+  font-size: 16px;
+  border: none;
+  width: 100%;
+  padding: 15px;
+  text-align: center;
+  border: none;
+  outline: none;
+  border-bottom: 1px solid #9775fa;
+  color: #fff;
+}
+
+.searchbar::-webkit-input-placeholder {
+  color: #ffe3e3;
+}
+
+.searchbar:-ms-input-placeholder {
+  color: #ffe3e3;
+}
+
+.searchbar::-ms-input-placeholder {
+  color: #ffe3e3;
+}
+
+.searchbar::placeholder {
+  color: #ffe3e3;
+}
+
+.searchbar:focus::-webkit-input-placeholder {
+  color: transparent;
+}
+
+.searchbar:focus:-ms-input-placeholder {
+  color: transparent;
+}
+
+.searchbar:focus::-ms-input-placeholder {
+  color: transparent;
+}
+
+.searchbar:focus::placeholder {
+  color: transparent;
+}
+
+.weather-bottom {
+  color: #ffe3e3;
+}
+
+.weather-bottom h2 {
+  font-size: 2rem;
+  padding: 10px;
+}
+
+.country {
+  color: #ffe3e3;
+  font-size: 2rem;
+}
+
+.weather-description {
+  text-transform: capitalize;
+}
+/*# sourceMappingURL=main.css.map */
