--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -44,8 +44,12 @@ body {
 	}
 }
 .weather-bottom {
-	display: none;
+	overflow: hidden;
+	height: 0;
+	visibility: hidden;
+	opacity: 0;
 	color: #ffe3e3;
+	transition: opacity 1s;
 
 	h2 {
 		font-size: 2rem;
@@ -53,7 +57,9 @@ body {
 	}
 }
 .active {
-	display: block;
+	visibility: visible;
+	opacity: 1;
+	height: auto;
 }
 .country {
 	color: #ffe3e3;
@@ -67,6 +73,7 @@ body {
 
 .details-button {
 	padding: 15px 60px;
+	margin-top: 15px;
 	background-color: #0b3c5d;
 	color: #fff;
 	border: none;
